--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
+    "build": "echo 'No build step required for static files'",
     "serve": "python3 -m http.server 8080",
     "serve-py": "python -m SimpleHTTPServer 8080"
   },
@@ -19,7 +20,7 @@
   ],
   "author": "",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "express": "4.18.2",
     "cors": "2.8.5"
   },
