Vercel serve update

--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     },
     {
       "src": "/",
-      "dest": "/examples/karaokenator.html"
+      "dest": "/server.js"
     },
     {
       "src": "/(.*)",
